# api

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml
.devcontainer/clickhouse/init/: 001_init.sql
.devcontainer/grafana/provisioning/dashboards/: default.yml  interface.json
.devcontainer/grafana/provisioning/datasources/: clickhouse.yml
.devcontainer/snmp-simulator/: cisco_2801.walk
.devcontainer/telegraf/: telegraf.conf
.github/workflows/: build_api_container.yml
bootstrap/transformers/: all_interfaces.yaml
bootstrap/types/: application.yaml  as.yaml  circuit.yaml  cpu.yaml  device.yaml  flow.yaml  interface.yaml  organization.yaml  pop.yaml
src/admin_api/: __init__.py  app.py  logs.py
src/admin_api/metadata/: router.py  service.py
src/admin_api/resource_type/: model.py  router.py
src/admin_api/src/admin_api/: __init__.py
src/admin_api/src/admin_api/metadata/: router.py
src/admin_api/tests/: test_resource_type_api_integration.py
src/admin_api/transformer/: model.py  router.py  service.py
src/metranova/: __init__.py  main.py
src/metranova/storage/: base.py  clickhouse.py
src/metranova_core/: __init__.py
src/metranova_core/storage/: base.py  clickhouse.py
src/pipeline/tests/: test_pipeline.py
telegraf/: telegraf.conf
tests/admin_api/: test_bootstrap_script.py  test_metadata_service.py  test_resource_type_api_integration.py  test_resource_type_request.py  test_resource_type_router.py  test_transformer_api_integration.py
tests/metranova_core/: test_clickhouse_integration.py  test_clickhouse_storage.py  test_metranova_main.py
