[project]
name = "metranova_core"
version = "0.1.0"
description = "Shared core package for MetrANOVA services"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "admin_api",
    "pipeline",
    "clickhouse-connect>=0.15.0",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
	"black>=26.3.1",
	"pytest>=8.4.0",
]

[tool.uv.sources]
admin-api = { workspace = true }
pipeline = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metranova"]

[tool.pytest.ini_options]
testpaths = [
	"tests/metranova_core",
	"src/admin_api/tests",
	"src/pipeline/tests",
]

[tool.black]
line-length = 88
target-version = ["py314"]
include = "\\.pyi?$"

[tool.fastapi]
entrypoint = "admin_api.app:app"
