[project]
name = "admin_api"
version = "0.1.0"
description = "Admin API package"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"metranova-core",
	"fastapi (>=0.120.0,<0.128.1)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "python-json-logger>=3.3.0",
]

[dependency-groups]
dev = [
	"pytest>=8.4.0",
]

[project.scripts]
admin_api = "admin_api:main"

[tool.uv.sources]
metranova-core = { workspace = true }

[tool.uv.workspace]
members = [
	".",
	"packages/metranova",
]

[tool.hatch.build.targets.wheel]
packages = ["src/admin_api"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.black]
force-exclude = '''
/(
    packages/pipeline/*
)/
'''

[tool.fastapi]
entrypoint = "admin_api.app:app"
